--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link
+      rel="icon"
+      href="https://firebasestorage.googleapis.com/v0/b/ecommerce-app-react-6be37.appspot.com/o/others%2Ffavicon.ico?alt=media&token=bb91b661-d120-4788-b465-ce72dcb8f209"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,7 +13,7 @@
       content="Web site created using create-react-app"
     />
 
-    <title>React App</title>
+    <title>brightbuy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
